[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Clement Hussenot", email = "chussenot@gmail.com"},
]
dependencies = [
    "fastapi>=0.87.0",
    "uvicorn[standard]>=0.19.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
